tests/bad/var_not_found.oc
/// fail: Couldn't find this identifier

def main() {
    return x
}